Update mod to 26.2